--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 	"dependencies": {
 		"@babel/core": "^7.0.0-0",
 		"@babel/plugin-proposal-private-property-in-object": "^7.18.6",
-		"@babel/preset-env": "7.12.17",
+		"@babel/preset-env": "^7.12.17",
 		"@fortawesome/fontawesome-svg-core": "^1.2.36",
 		"@fortawesome/free-regular-svg-icons": "^6.1.1",
 		"@nuxtjs/eslint-config": "^5.0.0",
